Update application
