# app/Http/Controllers/API/UserController.php
@@ -5,16 +5,97 @@ namespace App\Http\Controllers\API;
 use App\Http\Controllers\Controller;
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
 
 class UserController extends Controller
 {
-    public function index()
-    {
-        return $this->sendResponse(User::all(), 'All Users');
-    }
-
+    /**
+     * @OA\Get(
+     **  path="/user/{id}",
+     *   tags={"User"},
+     *   summary="Get user details",
+     *   operationId="user_details",
+     *   security={{"bearer_token": {}}},
+     * 
+     *   @OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="integer"
+     *      )
+     *   ),
+     * 
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
     public function show($id)
     {
-        return $this->sendResponse(User::find($id), 'One User');
+        return $this->sendResponse(User::with(['role_data'])->find($id), 'User details');
+    }
+
+    /**
+     * @OA\Post(
+     **  path="/user",
+     *   tags={"User"},
+     *   summary="Create user profile",
+     *   operationId="user_add",
+     *   security={{"bearer_token": {}}},
+     * 
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    public function store(Request $request)
+    {
+        $data = $request->input();
+        $data['password'] = Hash::make($request->password);
+
+        $data = User::create($data);
+
+        return $this->show($data->id);
     }
 }
